--- a/Resources/Private/Sass/inline_editing.scss
+++ b/Resources/Private/Sass/inline_editing.scss
@@ -96,10 +96,6 @@
     }
 }
 
-body:has(.t3-frontend-editing__ce) {
-    padding-top: 2rem;
-}
-
 // inline actions (buttons like edit, hide, delete, new)
 
 .t3-frontend-editing__inline-actions {
